# lazyFishEnjoyment-

./: README.md  attchment.md  first try at installation of  ubtuntu  installation of ubtuntu.md  附录.md
RMV03-彭启邦-10-04/: README.md  草稿代码.txt
RMV03-彭启邦-10-04/task/: CMakeLists.txt  main.cpp
RMV03-彭启邦-10-04/task/include/: windmill.hpp
RMV04/: CMakeLists.txt  main.cpp  rush copy.txt  rush.txt
RMV04/include/: ArmorPlateRecognitionLib.hpp  ImageProcessingLib.hpp  enhancement.h
RMV04/src/: ArmorPlateRecognitionLib.cpp  ImageProcessingLib.cpp  enhancement.cpp
opencv_project/: README.md
opencv_project/src/: main.cpp
